Setup docker files